--- a/TheilExtremal.tex
+++ b/TheilExtremal.tex
@@ -532,7 +532,7 @@ the length of this document reasonable we don't reproduce here the actual numeri
 One can note that this code is similar with the previous example, the estimation being computed with a call to \texttt{postN0()} function, and only the prior distributions are different.
 
 \begin{verbatim}
-library(pestim)
+library(pestim)s
 library(data.table)
 nReg <- 97
 nMNO <- 19
